--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <title>Hangman</title>
 </head>
 <body>
-    <script src="js/hangman.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
